Fixed issues with overflow in resources.html

--- a/css/resources-style.css
+++ b/css/resources-style.css
@@ -1,21 +1,62 @@
 .resources{
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr;
-    margin: 40px 0px;
-    /* Add color to the background of the grid and adjust for desktop version of the page */
+    display: block;
+    margin: 40px auto;
 }
 
 .section-description{
     display: block;
     width: auto;
-    height: 60px;
-    margin: 0 auto;
+    height: auto;
 }
 
 .section-description h3{
     font-family: "Lato";
     font-size: 30px;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.section-description p{
+    font-family: "Georgia";
+    font-size: 20px;
+    line-height: 30px;
+    padding: 20px 0px;
+}
+
+/* Internal resources */
+.internal-resources-wrapper{
+    display: block;
+    height: 800px;
+    border: black 1px solid;
+    border-radius: 10px;
+    overflow-y: auto;
+}
+
+.internal-resources{
+    display: grid;
+    height: 100%;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+    padding: 40px;
+    overflow-y: auto;
+}
+
+/* External resources */
+.external-resources-wrapper{
+    display: block;
+    height: 800px;
+    border: black 1px solid;
+    border-radius: 10px;
+    overflow-y: auto;
+}
+
+.external-resources{
+    display: grid;
+    height: 100%;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+    padding: 40px;
+    overflow-y: auto;
 }
 
 .resource-info{
@@ -51,10 +92,50 @@
 }
 
 @media only screen and (min-width: 1000px){
+    /* Internal resources desktop */
+    .internal-resources-wrapper{
+        display: block;
+        width: 850px;
+        height: 800px;
+        margin: 0 auto;
+        border: black 1px solid;
+        border-radius: 10px;
+        overflow-y: auto;
+    }
+    
+    .internal-resources{
+        display: grid;
+        height: 100%;
+        grid-gap: 20px;
+        grid-template-columns: 1fr;
+        padding: 40px;
+        overflow-y: auto;
+    }
+
+    /* External resources desktop */
+    .external-resources-wrapper{
+        display: block;
+        width: 850px;
+        height: 800px;
+        margin: 0 auto;
+        border: black 1px solid;
+        border-radius: 10px;
+        overflow-y: auto;
+    }
+    
+    .external-resources{
+        display: grid;
+        height: 100%;
+        grid-gap: 20px;
+        grid-template-columns: 1fr;
+        padding: 40px;
+        overflow-y: auto;
+    }
+    
     .resource-info{
         display: grid;
         height: 160px;
-        width: 800px;
+        width: 100%;
         grid-template-columns: 1fr 250px;
         border-radius: 5px;
         border: black 1px solid;
@@ -71,5 +152,10 @@
         display: block;
         width: 100%;
         height: 100%;
+    }
+
+    .section-description{
+        width: 800px;
+        margin: 0 auto;
     }
 }
